# nu_plugin_sdkman

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  RELEASING.md  build.nu  install.nu  install.sh
.github/workflows/: release.yml
.kiro/: context.md  rules.md  sessions.md  tasks.md
src/: constants.rs  lib.rs  main.rs
src/commands/: aliases.rs  config.rs  current.rs  default.rs  env.rs  flush.rs  help.rs  home.rs  install.rs  list.rs  mod.rs  offline.rs  uninstall.rs  update.rs  upgrade.rs  use.rs  version.rs
src/core/: api.rs  env.rs  install.rs  mod.rs
src/utils/: archive.rs  download.rs  mod.rs
tests/: api_tests.rs  archive_tests.rs  env_tests.rs  integration_tests.rs  symlink_tests.rs
